<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/lienhe1234"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activity.ThongTinActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thongTinKhachHang"
            android:textSize="30sp"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:hint="@string/nhapTenKhachHang"
            android:gravity="center"
            android:background="@drawable/custom_button_simple5"
            android:inputType="text"
            android:backgroundTint="#81FFFFFF"
            android:layout_margin="5dp"
            android:id="@+id/editTextTenKhachHang"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:hint="@string/nhapSoDienThoai"
                android:layout_margin="5dp"
                android:backgroundTint="#81FFFFFF"
                android:textStyle="bold"
                android:background="@drawable/custom_button_simple5"
                android:inputType="phone"
                android:id="@+id/editTextSoDienThoai"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nhapEmail"
                android:inputType="textEmailAddress"
                android:layout_margin="5dp"
                android:gravity="center"
                android:backgroundTint="#81FFFFFF"
                android:textStyle="bold"
                android:background="@drawable/custom_button_simple5"
                android:id="@+id/editTextEmail"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputCustomerAddress"
                android:layout_margin="5dp"
                android:gravity="center"
                android:backgroundTint="#81FFFFFF"
                android:textStyle="bold"
                android:background="@drawable/custom_button_simple5"
                android:id="@+id/editTextDiaChi"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phuongThucThanhToan"
            android:textColor="#ffff"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioThanhToan"
                android:gravity="center"
                >
                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/taiNha"
                    android:layout_marginRight="50dp"
                    android:id="@+id/radioTaiNha"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:buttonTint="#ffff"
                    android:textColor="#ffff"
                    />
                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/trucTuyen"
                    android:id="@+id/radioTrucTuyen"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:buttonTint="#ffff"
                    android:textColor="#ffff"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:layout_marginRight="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacNhan"
                android:id="@+id/butTonXacNhan"
                android:padding="10dp"
                android:textStyle="bold"
                android:background="@drawable/custom_button_simple4"
                android:textSize="15sp"
                android:textColor="#fff"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/troVe"
                android:id="@+id/butTonTrove"
                android:padding="10dp"
                android:background="@drawable/custom_button_simple4"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#fff"

                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>