<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    android:background="#4CAF50"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:src="@mipmap/login123456"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/loGo"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutEmail"
        android:layout_below="@+id/loGo"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email1"
            android:textColor="#ffff"
            android:hint="@string/email"
            android:drawableLeft="@mipmap/mail"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutPassword"
        android:layout_below="@+id/layoutEmail"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password1"
            android:drawableLeft="@mipmap/key"
            android:textColor="#ffff"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox1"
        android:text="@string/nhoDangNhap"
        android:textSize="20dp"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/layoutPassword"
        android:layout_marginTop="35dp"
        android:id="@+id/loading"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/butTonDangNhap1"
        android:text="@string/loGin"
        android:textColor="#ffff"
        android:layout_below="@+id/layoutPassword"
        android:layout_marginTop="30dp"
        android:backgroundTint="#2196F3"
        android:layout_centerInParent="true"
        android:textSize="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDangKy1"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:textColor="#ffff"
        android:layout_below="@id/butTonDangNhap1"
        android:text="@string/reGisTer"
        android:textSize="20dp"
        />
</LinearLayout>