<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/register123"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbarDangKy"
        app:title="@string/reGisTer"
        app:titleTextColor="#ffff"
        android:background="#673AB7"
        />
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Welcome"
            android:textColor="#ffff"
            android:textSize="40dp"
            android:gravity="center"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#009688"
                android:textSize="20dp"
                android:drawableLeft="@mipmap/customer"
                android:textColorHint="#FF5722"
                android:inputType="textPersonName"
                android:hint="@string/cusToMerName"
                android:id="@+id/name"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#9C27B0"
                android:drawableLeft="@mipmap/mail"
                android:textSize="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/emailAddress"
                android:id="@+id/email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#9C27B0"
                android:textStyle="bold"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:hint="@string/passWord"
                android:id="@+id/password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#9C27B0"
                android:textStyle="bold"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:hint="@string/confirmPassword"
                android:id="@+id/c_password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radiogp"
                android:gravity="center"
                >
                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/male"
                    android:layout_marginRight="100dp"
                    android:id="@+id/male"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:buttonTint="#9C27B0"
                    android:textColor="#9C27B0"
                    />
                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/female"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:buttonTint="#9C27B0"
                    android:textColor="#9C27B0"
                    />
            </RadioGroup>
        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/loading"
            android:visibility="gone"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/reGisTer"
            android:id="@+id/butTonRegister"
            android:backgroundTint="#673AB7"
            android:layout_marginTop="30dp"
            android:textColor="#ffff"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>