<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activity.GioHang">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBarGioHang"
        app:title="@string/gioHang"
        android:background="#2196F3"
        >
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >
        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioHangDangTrong"
                android:textSize="30sp"
                android:id="@+id/textViewThongBao"
                android:layout_gravity="center"
                />
            <ListView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/listViewGioHang123"
                android:divider="#f20"
                android:dividerHeight="2dp"
                android:focusable="true"
                />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <LinearLayout
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/tongTien"
                    android:id="@+id/textViewTongTien"
                    android:textColor="#FF5722"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:id="@+id/textViewGiaTri"
                    android:text="Giá Trị"
                    android:textColor="#FF5722"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/butTonThanhToanGioHang"
        android:text="@string/thanhToanGioHang"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:background="@drawable/custom_button_simple1"
        android:textColor="#ffff"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_simple1"
        android:id="@+id/butTonTiepTucMuaHang"
        android:text="@string/tiepTucMuaHang"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>