<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ChiTietSanPham">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/chiTietSanPham"
        app:titleTextColor="#FF5722"
        android:background="#00BCD4"
        android:id="@+id/toolBarChiTietSanPham"
        />
    <LinearLayout
        android:layout_height="250dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imageViewChiTietSanPham"
            />
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="#FF5722"
                android:layout_gravity="center"
            android:textStyle="bold"
            android:text="Tên Sản Phẩm"
            android:id="@+id/textViewTenChiTietSanPham"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="#00BCD4"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="Giá Sản Phẩm"
                android:id="@+id/textViewGiaChiTietSanPham"
                />
            <Spinner
                android:layout_margin="3dp"
                android:padding="15dp"
                android:background="@drawable/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/spinner"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                ></Spinner>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themGioHang"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_simple1"
                android:id="@+id/butTonDatMua"
                android:textColor="#fff"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moTaChiTietSanPham"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#3B55FF"
            />
        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textViewMoTaChiTietSanPham"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                />
        </ScrollView>
    </LinearLayout>
</LinearLayout>